--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -66,7 +66,7 @@
     "address-book-import": "Address Book Import",
     "address-book-too-large-for-a-qr-code": "Address book too large for a QR code.",
     "back-to-address-book": "Back to address book",
-    "bad-import-data-make-sure-you-selected-a-nault-address-book": "Bad import data, make sure you selected a Nault Address Book export",
+    "bad-import-data-make-sure-you-selected-a-kotai-wallet-address-book": "Bad import data, make sure you selected a KOTAI-Wallet Address Book export",
     "edit-entry": "Edit Entry",
     "exchange-deposit-address-main-trading-account-etc": "Exchange Deposit Address, Main Trading Account, etc.",
     "export-address-book": "Export Address Book",
@@ -110,19 +110,19 @@
     "checking-status": "Checking Status...",
     "good-representative": "Good Representative",
     "health": "Health",
-    "it-is-highly-advised-to-switch-to-a-different-representative": "It is highly advised to switch to a different representative, in order to improve security and decentralization of the nano network.",
+    "it-is-highly-advised-to-switch-to-a-different-representative": "It is highly advised to switch to a different representative, in order to improve security and decentralization of the KOTAI network.",
     "receive-a-transaction-to-configure": "Receive a transaction to configure",
-    "rep-represents-you": "{{ name }} represents you in the nano consensus protocol by voting on your behalf.",
+    "rep-represents-you": "{{ name }} represents you in the KOTAI consensus protocol by voting on your behalf.",
     "representative-change-required": "Representative Change Required",
     "representative-for-account": "Representative for {{ account }}",
     "representative-none": "None",
-    "switching-to-a-different-representative-could-improve": "Switching to a different representative could improve security and decentralization of the nano network.",
+    "switching-to-a-different-representative-could-improve": "Switching to a different representative could improve security and decentralization of the KOTAI network.",
     "this-representative-has-a-high-voting-weight": "This representative has a high voting weight (over {{ percent }}%).",
     "this-representative-has-a-very-high-voting-weight": "This representative has a very high voting weight (over {{ percent }}%).",
     "this-representative-has-announced-plans-to-permanently-shutdown": "This representative has announced plans to permanently shutdown.",
     "this-representative-has-been-offline-for-the-past-days": "This representative has been offline for the past {{ days }} days.",
     "this-representative-is-marked-as-avoid": "This representative is marked as \"avoid\" in the representatives book.",
-    "this-representative-is-marked-as-nf": "This representative was created by the Nano Foundation and should be avoided to increase decentralization.",
+    "this-representative-is-marked-as-nf": "This representative was created by  KOTAI and should be avoided to increase decentralization.",
     "this-representative-is-often-offline": "This representative is often offline ({{ percent }}% uptime)",
     "this-representative-is-sometimes-offline": "This representative is sometimes offline ({{ percent }}% uptime).",
     "unknown-rep": "Unknown Rep",
@@ -143,9 +143,9 @@
     "change-if-your-wallet-should-be-locked-automatically-after": "Change if your wallet should be locked automatically after you have not interacted with it for a certain period of time",
     "change-the-currency-pair-used-when-showing-fiat-values": "Change the currency pair used when showing fiat values in the application. Select None to hide fiat pairs.",
     "change-where-your-wallet-is-stored-if-you-select-none-your": "Change where your wallet is stored. If you select none, your wallet is reset every time you reload.",
-    "change-which-server-is-used-to-communicate-with-the-nano": "Change which server is used to communicate with the nano network",
+    "change-which-server-is-used-to-communicate-with-the-nano": "Change which server is used to communicate with the KOTAI network",
     "clear-all-data": {
-      "1": "You are about to delete all data stored in Nault, which includes all locally stored data about your currently configured wallet, all entries from your address and representative books, and any other cached data. All settings will be reset to default.",
+      "1": "You are about to delete all data stored in KOTAI-Wallet, which includes all locally stored data about your currently configured wallet, all entries from your address and representative books, and any other cached data. All settings will be reset to default.",
       "successfully-deleted-locally-stored-data-and-reset-the": "Successfully deleted locally stored data and reset the settings!"
     },
     "clear-work-cache": "Clear Work Cache",
@@ -153,7 +153,7 @@
     "component": {
       "wallet-storage": "Wallet Storage"
     },
-    "configure-nault": "Configure Nault",
+    "configure-nault": "Configure KOTAI-Wallet",
     "cpu-worker-support-not-available-set-pow-to-best": "CPU Worker support not available, set PoW to Best",
     "currencies": {
       "none": "None"
@@ -190,7 +190,7 @@
     "leave-blank-to-use-a-recommended-one": "Leave blank to use a recommended one",
     "lock-after-inactivity": "Lock After Inactivity",
     "min-receive-amount": "Min. Receive Amount",
-    "minimum-nano-amount-to-receive-transactions-below-this": "Minimum XNO amount to receive. Transactions below this amount will be ignored by the wallet both for receiving and in the transactions list.  Set to blank or 0 to accept all transactions.",
+    "minimum-nano-amount-to-receive-transactions-below-this": "Minimum KTI amount to receive. Transactions below this amount will be ignored by the wallet both for receiving and in the transactions list.  Set to blank or 0 to accept all transactions.",
     "multiplier-options": {
       "default-1x-or-1-64x": "Default (1x or 1/64x)"
     },
@@ -233,21 +233,21 @@
     "this-has-to-be-a-valid-authorization-header": "This has to be a valid Authorization header.",
     "this-has-to-be-a-valid-rpc": {
       "1": "This has to be a valid",
-      "2-link-rpc": "nano RPC endpoint",
+      "2-link-rpc": "KOTAI RPC endpoint",
       "3": "or an API compliant with it."
     },
     "this-has-to-be-a-valid-websocket": {
       "1": "This has to be a valid",
-      "2-link-websocket": "Nano Node Websocket",
+      "2-link-websocket": "KOTAI Node Websocket",
       "3": "or a WebSocket API compliant with it."
     },
     "this-has-to-be-a-valid-work": {
       "1": "This has to be a valid",
-      "2-link-work": "Nano Work Server",
+      "2-link-work": "KOTAI Work Server",
       "3": "endpoint or an API compliant with it. If your server on localhost does not work, try the desktop app instead."
     },
     "this-representative-will-be-used-for-any-new-account": "This representative will be used for any new account",
-    "this-server-is-used-for-rpc-communication-with-the-nano-node": "This server is used for RPC communication with the nano node",
+    "this-server-is-used-for-rpc-communication-with-the-nano-node": "This server is used for RPC communication with the KOTAI node",
     "this-server-is-used-to-notify-the-wallet-in-real-time-when": "This server is used to notify the wallet in real time when new transactions arrive",
     "this-will-delete-all-data-related-to-your-wallet-your-seed-a": "This will delete all data related to your wallet (Your seed and accounts)",
     "this-will-delete-all-locally-cached-proof-of-work-values": "This will delete all locally cached Proof of Work values",
@@ -262,7 +262,7 @@
     "work-server": "Work Server",
     "you-are-about-to-delete-all-locally-cached-proof-of-work": "You are about to delete all locally cached Proof of Work values.",
     "you-are-about-to-delete-all-locally-stored-data-about-your": "You are about to delete all locally stored data about your currently configured wallet.",
-    "you-are-about-to-disable-storage-of-all-wallet-data-which": "You are about to disable storage of all wallet data, which means there will be no wallet configured next time you use Nault."
+    "you-are-about-to-disable-storage-of-all-wallet-data-which": "You are about to disable storage of all wallet data, which means there will be no wallet configured next time you use KOTAI."
   },
   "configure-wallet": {
     "new-wallet": {
@@ -354,63 +354,65 @@
     "you-will-not-be-able-to-recover-the-funds-without-a-backup": "YOU WILL NOT BE ABLE TO RECOVER THE FUNDS without a backup of your currently configured wallet."
   },
   "welcome": {
-    "a-secure-open-source-wallet-for-nano": "A secure open source wallet for nano",
-    "advanced-security-features": {
-      "1": "Support for Ledger Nano S / Nano X hardware wallets",
-      "2": "Ability to create multi-signature addresses where multiple private keys are required to access and transfer the funds",
-      "3": "Ability to sign transactions remotely, allowing you to conduct transactions securely without ever allowing your secret keys to leave your offline device",
-      "nault-includes": "Nault includes several options for enhanced security:",
-      "title": "Advanced Security Features"
-    },
-    "any-device-anywhere": {
-      "1": "Nault is a web application that can be used on most desktop and handheld devices.",
-      "2": {
-        "1": "You may also use the desktop application for Windows, Linux or Mac. It is available for download",
-        "2-link-github-releases": "from the GitHub releases page",
-        "3": "."
+    "a-secure-open-source-wallet-for-nano": {
+      "1": "A secure open source wallet for ",
+      "2": "KOTAI"
       },
-      "3": {
-        "1": "All code is open source and",
-        "2-link-github": "available on GitHub",
-        "3": "."
+      "advanced-security-features": {
+        "1": "Ability to create multi-signature addresses where multiple private keys are required to access and transfer the funds",
+        "2": "Ability to sign transactions remotely, allowing you to conduct transactions securely without ever allowing your secret keys to leave your offline device",
+        "nault-includes": "KOTAI-Wallet includes several options for enhanced security:",
+        "title": "Advanced Security Features"
       },
-      "title": "Any Device, Anywhere"
-    },
-    "any-node-always-available": {
-      "1": {
-        "1": "Even if the official",
-        "2-link-nault": "nault.cc",
-        "3": "domain would become inaccessible, you would still be able to use the",
-        "4-link-github-releases": "desktop application",
-        "5": "or",
-        "6-link-github-web-app": "host the web application yourself",
-        "7": "."
+      "any-device-anywhere": {
+        "1": "KOTAI-Wallet is a web application that can be used on most desktop and handheld devices.",
+        "2": {
+          "1": "You may also use the desktop application for Windows, Linux or Mac. It is available for download",
+          "2-link-github-releases": "from the GitHub releases page",
+          "3": "."
+        },
+        "3": {
+          "1": "All code is open source and",
+          "2-link-github": "available on GitHub",
+          "3": "."
+        },
+        "title": "Any Device, Anywhere"
       },
-      "2": {
-        "1": "In Nault there is no single source of truth. All information is provided by the server that's set in app settings. That also means there is no single point of failure – you may choose any public or self-hosted",
-        "2-link-nano-node": "nano node",
-        "3": "as the server."
+      "any-node-always-available": {
+        "1": {
+          "1": "Even if the official",
+          "2-link-nault": "link",
+          "3": "domain would become inaccessible, you would still be able to use the",
+          "4-link-github-releases": "desktop application",
+          "5": "or",
+          "6-link-github-web-app": "host the web application yourself",
+          "7": "."
+        },
+        "2": {
+          "1": "In KOTAI-Wallet there is no single source of truth. All information is provided by the server that's set in app settings. That also means there is no single point of failure – you may choose any public or self-hosted",
+          "2-link-nano-node": "KOTAI node",
+          "3": "as the server."
+        },
+        "title": "Any Node, Always Available"
       },
-      "title": "Any Node, Always Available"
-    },
-    "configure-wallet": "Configure Wallet",
-    "learn-more": "Learn more",
-    "secure-the-nano-network": {
-      "1": {
-        "1": "Nano uses",
-        "2-link-orv": "ORV consensus",
-        "3": ", which allows users to be in control of how much voting power representatives have on the network."
+      "configure-wallet": "Configure Wallet",
+      "learn-more": "Learn more",
+      "secure-the-nano-network": {
+        "1": {
+          "1": "KOTAI uses",
+          "2-link-orv": "ORV consensus",
+          "3": ", which allows users to be in control of how much voting power representatives have on the network."
+        },
+        "2": "KOTAI-Wallet will automatically check the status of your representatives and provide recommendations to ensure security and censorship resistance for all network participants.",
+        "title": "Secure the KOTAI Network"
       },
-      "2": "Nault will automatically check the status of your representatives and provide recommendations to ensure security and censorship resistance for all network participants.",
-      "title": "Secure the Nano Network"
-    },
-    "view-my-accounts": "View My Accounts",
-    "welcome-back-it-looks-like-your-wallet-is-already-configured": "Welcome back! It looks like your wallet is already configured.",
-    "your-keys-your-coins": {
-      "1": "You are solely responsible for the security of your funds.",
-      "2": "Secret keys that you use in Nault are temporarily stored on your device, encrypted by the password that you choose.",
-      "3": "No sensitive data is ever sent across the internet.",
-      "title": "Your Keys, Your Coins"
+      "view-my-accounts": "View My Accounts",
+      "welcome-back-it-looks-like-your-wallet-is-already-configured": "Welcome back! It looks like your wallet is already configured.",
+      "your-keys-your-coins": {
+        "1": "You are solely responsible for the security of your funds.",
+        "2": "Secret keys that you use in KOTAI-Wallet are temporarily stored on your device, encrypted by the password that you choose.",
+        "3": "No sensitive data is ever sent across the internet.",
+        "title": "Your Keys, Your Coins"
+      }
     }
-  }
-}
+    }
